--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,15 @@ body {
   cursor: move;
 }
 
+.column-wrapper {
+  width: 100%;
+}
+
+.column-wrapper .column {
+  resize: horizontal;
+  overflow: auto;
+}
+
 .row {
   border: 1px solid red;
   padding: 0;
@@ -109,4 +118,5 @@ body {
   flex: 1;
   flex-direction: column;
   margin-bottom: 100px;
+  overflow: hidden;
 }
